fixed add slider alignment

--- a/utilities/scss/_responsive.scss
+++ b/utilities/scss/_responsive.scss
@@ -305,9 +305,9 @@
     .tbl-mobile tr td.td-header {
         display: flex ;
     }
-    .action-btn , .active-lbl ,.inactive-lbl{
-        text-align: left !important;
-    }
+    // .action-btn , .active-lbl ,.inactive-lbl{
+    //     text-align: left !important;
+    // }
     .action-btn button , .btn-collapse {
         width: 100% !important;
     }
