--- a/utilities/scss/main.css
+++ b/utilities/scss/main.css
@@ -10357,10 +10357,6 @@ td.btn-collapse {
     display: flex;
   }
 
-  .action-btn, .active-lbl, .inactive-lbl {
-    text-align: left !important;
-  }
-
   .action-btn button, .btn-collapse {
     width: 100% !important;
   }
